Quick and dirty fix to prevent overflowing of component groups.

--- a/frontend/src/app/shared/accordion-box/accordion-box.component.scss
+++ b/frontend/src/app/shared/accordion-box/accordion-box.component.scss
@@ -1,7 +1,7 @@
 :host {
   article {
     box-sizing: border-box;
-    max-width: 40rem;
+    max-width: 34rem;
     border: 1px solid #707070;
 
     header {
